2005-10-21  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh
	(bytecode_generator::visit_generic_invocation): New method.
	* dump.cc (dumper::visit_generic_invocation): New method.
	* fold.cc (fold_visitor::visit_generic_invocation): New method.
	* defassign.cc
	(definite_assignment_visitor::visit_generic_invocation): New
	method.
	* visitor.hh (visitor::visit_generic_invocation): Declare.
	* name.cc (classify_expression_name): Added 'type_args' argument.
	* name.hh (classify_expression_name): Added argument.
	* source/parse.cc (primary): Handle invocation with explicit type
	parameters.
	* model/invoke.cc: Added instantiation.
	(visit): New method.
	* model/invoke.hh (model_generic_method_invocation): New typedef.
	* model/memberref.cc (resolve): Updated.
	* model/memberref.hh (model_memberref_forward::type_parameters):
	New field.
	(model_memberref_forward::set_type_parameters): New method.

2005-10-21  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (model_method): Set 'descriptor'.

2005-10-21  Tom Tromey  <tromey@redhat.com>

	* unify.cc (resolve_constraints): Add '==' mappings to resulting
	type map.
	(compute_ec): Set 'ec' the first time through.
	(compute_inv): Put non-generic types into the map.
	* model/arraytype.cc (apply_type_map): New method.
	* model/arraytype.hh (model_array_type::apply_type_map): Declare.

2005-10-21  Tom Tromey  <tromey@redhat.com>

	* model/invoke.hh (model_invocation_base::method_conversion_p):
	Declare.
	(model_generic_invocation::method_conversion_p): Likewise.
	(model_generic_invocation::resolved_params): New field.
	(model_generic_invocation::resolve): Declare.
	* model/invoke.cc (method_conversion_p): New methods.
	(try_method_conversion): Use it.
	(model_generic_invocation): New method.

2005-10-19  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* dump.cc (pretty_printer::print_method): Do not descend into
	the return type of the method, just print the pretty name.