@@ -1,3 +1,9 @@
+2005-10-22  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* dump.cc (pretty_printer::visit_generic_invocation): Flesh out
+	the "method_invocation" variant.  Differentiate the "new_primary"
+	variant from the "new" variant.
+
 2005-10-21  Tom Tromey  <tromey@redhat.com>
 
 	* bytecode/generate.hh
